<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:validator="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.andreabaccega.widget.FormEditText
        validator:testType="alpha"
        android:id="@+id/fullName"
        validator:emptyErrorString="@string/error_empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_name"
        android:layout_marginTop="130dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />

    <com.andreabaccega.widget.FormEditText
        validator:testType="regexp"
        validator:customRegexp="^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,4}$"
        android:id="@+id/email"
        validator:emptyErrorString="@string/error_empty"
        validator:testErrorString="@string/error_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email_hint"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <com.andreabaccega.widget.FormEditText
        validator:testType="phone"
        validator:emptyErrorString="@string/error_empty"
        validator:testErrorString="@string/error_phone"
        android:id="@+id/phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/hint_phone"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />

    <Button
        android:id="@+id/validate"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/btn_validate"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>
</LinearLayout>